@@ -53,6 +53,7 @@ following names for their contribution to the product.
 * Michael De La Rue
 * Mike Horvath
 * Mormegil
+* Nathaniel Herman
 * RememberTheDot
 * ST47
 
